--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="logo"><img src="image/logo.png" alt=""></div>
+  <div class="logo"><img src="image/logo.png" alt="Logo Pixar"></div>
   <div class="escolha">Escolha seu personagem</div>
   <div class="carrosel">
     <div class="container"><!--Carrosel Container-->
@@ -30,7 +30,7 @@
         <div class="personagens tristeza">
         </div>
       </a>
-      <a class="link-raiva" href="#">
+      <a class="link-raiva" href="raiva.html" target="_self">
         <div class="personagens raiva"></div>
       </a>
     </div>
