--- a/raiva.html
+++ b/raiva.html
@@ -17,7 +17,7 @@
   <div class="escolha">Raiva</div>
   <div class="container">
     <div class="video-area">
-     <video src="video/Raiva.mp4" autoplay loop muted></video>
+      <video src="video/Raiva.mp4" autoplay loop></video>
     </div>
   </div>
   </div>
