--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
   <div class="escolha">Escolha seu personagem</div>
   <div class="carrosel">
     <div class="container"><!--Carrosel Container-->
-      <a class="link-Nojinho" href="#">
+      <a class="link-Nojinho" href="nojinho.html">
         <div class="personagens nojinho">
         </div>
       </a>
-      <a class="link-medo" href="#">
+      <a class="link-medo" href="medo.html">
         <div class="personagens medo">
         </div>
       </a>
-      <a class="link-alegria" href="#">
+      <a class="link-alegria" href="alegria.html">
         <div class="personagens alegria">
         </div>
       </a>
-      <a class="link-tristeza" href="#">
+      <a class="link-tristeza" href="tristeza.html">
         <div class="personagens tristeza">
         </div>
       </a>
