--- a/raiva.html
+++ b/raiva.html
@@ -12,13 +12,39 @@
 
 <body>
   <div class="logo">
-    <div class="voltar"><a href="index.html">Voltar</a></div><img src="image/logo.png" alt="Logo Pixar">
+    <div class="voltar"><a href="index.html">←<span>Voltar</span></a></div><img src="image/logo.png" alt="Logo Pixar">
+  </div>
+  <div class="opcoes">
+    <a href="nojinho.html">
+      <div class="perso nojo"></div>
+    </a>
+    <a href="medo.html">
+      <div class="perso medo"></div>
+    </a>
+    <a href="raiva.html">
+      <div class="perso raiva"></div>
+    </a>
+    <a href="alegria.html">
+      <div class="perso alegria"></div>
+    </a>
+    <a href="tristeza.html">
+      <div class="perso tristeza"></div>
+    </a>
   </div>
   <div class="escolha">Raiva</div>
   <div class="container">
     <div class="video-area">
       <video src="video/Raiva.mp4" autoplay loop></video>
     </div>
+    <p>
+      Ei, eu sou o Raiva!<br>Sempre estou pronto para entrar em ação quando as coisas não saem como planejado. Às vezes
+      posso parecer um pouco intenso, com meu cabelo em chamas e tudo, mas não é por mal.<span>
+        Estou aqui para proteger a
+        Riley quando ela se sente injustiçada ou quando as coisas não saem do jeito dela. É uma responsabilidade
+        importante, e eu levo isso a sério. Afinal, todos precisamos de um pouco de raiva para mostrar que não devemos
+        ser
+        pisoteados, certo?
+      </span></p>
   </div>
   </div>
 </body>
